added a logo to the title

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet", href="styles.css">
-    <title>Document</title>
+    <title>MH-20</title>
+    <link rel="icon" href="images/city.png" type="image/png">
 </head>
 <body>
     <div class="hero">
