--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <img src="images/profile.webp" alt="Your guide">
                 <div>
                     <h1 class="guide">Your Guide</h1>
-                    <p class="quote">I have lived in Sambhajinagar for 20 years and I am passionate about
-                        sharing its rich history and culture with visitors.</p>
+                    <p class="quote"><em>"I have lived in Sambhajinagar for 20 years and I am passionate about
+                        sharing its rich history and culture with visitors."</em></p>
                     <h4 class="guide-name">Vishnupriya Shisode</h4>
                 </div>
             </div>
